--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -25,19 +25,28 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  align-items: center;
 }
 
 .main-navigation_items li {
   margin: 0 1rem;
 }
 
-.main-navigation_items a {
+.main-navigation_items a,
+.main-navigation_items button {
   text-decoration: none;
   color: rgb(255, 162, 56);
+  border: none;
+  font: inherit;
+  background: transparent;
+  cursor: pointer;
+  margin: 0;
 }
 
 .main-navigation_items a:hover,
 .main-navigation_items a:active,
-.main-navigation_items a.active {
+.main-navigation_items a.active,
+.main-navigation_items button:hover,
+.main-navigation_items button:active {
   color: aliceblue;
 }
